[build-system]

requires = ["hatchling"]

build-backend = "hatchling.build"

[project]

name = "qstress"

dynamic = ["version"]

authors = [{ name = "Brian Law", email = "lwm7708@gmail.com" }]

license = "MIT"

description = 'A simple tool for stress testing.'

readme = "README.md"

requires-python = ">=3.9"

keywords = []

dependencies = ["typer>=0.9.0"]

[project.scripts]

qstress = "qstress.cli:app"

[project.urls]

Documentation = "https://github.com/lwm7708/qstress#readme"

Issues = "https://github.com/lwm7708/qstress/issues"

Source = "https://github.com/lwm7708/qstress"

[tool.hatch.build.targets.sdist]

exclude = ["/dist"]

[tool.hatch.build.targets.wheel]

packages = ["src/qstress"]

[tool.hatch.version]

path = "src/qstress/__about__.py"

[[tool.hatch.envs.all.matrix]]

python = ["3.9", "3.10", "3.11", "3.12"]
